--- a/04_storage/manifests/nfs-storageClass.yaml
+++ b/04_storage/manifests/nfs-storageClass.yaml
@@ -7,7 +7,7 @@ parameters:
   server: 192.168.20.3
   share: /volume1/k8s
 reclaimPolicy: Retain
-volumeBindingMode: Immediate
+volumeBindingMode: WaitForFirstConsumer
 mountOptions:
   - hard
   - nfsvers=4.1
