New local hostname

--- a/06_networking/helm-values/traefik.yaml
+++ b/06_networking/helm-values/traefik.yaml
@@ -40,7 +40,7 @@ ports:
       options: ""
       certResolver: "letsencrypt"
       domains:
-        - main: "*.nigelvanhattum.nl"
+        - main: "*.local.nigelvanhattum.nl"
     middlewares: []
 
 service:
