--- a/06_networking/helm-values/traefik.yaml
+++ b/06_networking/helm-values/traefik.yaml
@@ -48,6 +48,8 @@ service:
   ## -- Single service is using `MixedProtocolLBService` feature gate.
   ## -- When set to false, it will create two Service, one for TCP and one for UDP.
   single: true
+  spec:
+    externalTrafficPolicy: Local
   # -- Additional annotations applied to both TCP and UDP services (e.g. for cloud provider specific config)
   annotations: {
     metallb.universe.tf/address-pool: traefik-ip-pool
