--- a/03_base_resources/helm-values/postgresql-ha.yaml
+++ b/03_base_resources/helm-values/postgresql-ha.yaml
@@ -151,92 +151,8 @@ pgpool:
 ## PostgreSQL service parameters
 ##
 service:
-  ## @param service.type Kubernetes service type (`ClusterIP`, `NodePort` or `LoadBalancer`)
-  ##
-  type: ClusterIP
-  ## @param service.ports.postgresql PostgreSQL port
-  ##
-  ports:
-    postgresql: 5432
-  ## @param service.portName PostgreSQL service port name
-  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#multi-port-services
-  ##
-  portName: postgresql
-  ## @param service.nodePorts.postgresql Kubernetes service nodePort
-  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
-  ##
-  nodePorts:
-    postgresql: ""
-  ## @param service.loadBalancerIP Load balancer IP if service type is `LoadBalancer`
-  ## Set the LoadBalancer service type to internal only
-  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#internal-load-balancer
-  ##
-  loadBalancerIP: ""
-  ## @param service.loadBalancerSourceRanges Addresses that are allowed when service is LoadBalancer
-  ## https://kubernetes.io/docs/tasks/access-application-cluster/configure-cloud-provider-firewall/#restrict-access-for-loadbalancer-service
-  ##
-  ## loadBalancerSourceRanges:
-  ## - 10.10.10.0/24
-  ##
-  loadBalancerSourceRanges: []
-  ## @param service.clusterIP Set the Cluster IP to use
-  ## Static clusterIP or None for headless services
-  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#choosing-your-own-ip-address
-  ## e.g:
-  ## clusterIP: None
-  ##
-  clusterIP: ""
-  ## @param service.externalTrafficPolicy Enable client source IP preservation
-  ## ref https://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip
-  ##
-  externalTrafficPolicy: Cluster
-  ## @param service.extraPorts Extra ports to expose (normally used with the `sidecar` value)
-  ##
-  extraPorts: []
-  ## @param service.sessionAffinity Control where client requests go, to the same pod or round-robin
-  ## Values: ClientIP or None
-  ## ref: https://kubernetes.io/docs/user-guide/services/
-  ##
-  sessionAffinity: "None"
-  ## @param service.sessionAffinityConfig Additional settings for the sessionAffinity
-  ## sessionAffinityConfig:
-  ##   clientIP:
-  ##     timeoutSeconds: 300
-  sessionAffinityConfig: {}
-  ## @param service.annotations Provide any additional annotations both for PostgreSQL and Pgpool services
-  ##
   annotations: {
-    traefik.ingress.kubernetes.io/router.entrypoints: internet
+    traefik.ingress.kubernetes.io/router.entrypoints: internet,
+    traefik.ingress.kubernetes.io/router.tls.domains.0.main: postgresql.nigelvanhattum.nl
   }
-  ## @param service.serviceLabels Labels for PostgreSQL service
-  ##
-  serviceLabels: {}
-  ## Headless service properties
-  ##
-
-
-  ## @param networkPolicy.enabled Enable NetworkPolicy
-  ##
-  enabled: false
-  ## @param networkPolicy.allowExternal Don't require client label for connections
-  ## The Policy model to apply. When set to false, only pods with the correct
-  ## client labels will have network access to the port PostgreSQL is listening
-  ## on. When true, PostgreSQL will accept connections from any source
-  ## (with the correct destination port).
-  ##
-  allowExternal: true
-  ## @param networkPolicy.egressRules.denyConnectionsToExternal Enable egress rule that denies outgoing traffic outside the cluster, except for DNS (port 53)
-  ## @param networkPolicy.egressRules.customRules [object] Custom network policy rule
-  ##
-  egressRules:
-    # Deny connections to external. This is not compatible with an external database.
-    denyConnectionsToExternal: false
-    ## Additional custom egress rules
-    ## e.g:
-    ## customRules:
-    ##   - to:
-    ##       - namespaceSelector:
-    ##           matchLabels:
-    ##             label: example
-    ##
-    customRules: []
+  
