--- a/03_base_resources/manifests/skooner/service.yaml
+++ b/03_base_resources/manifests/skooner/service.yaml
@@ -5,7 +5,9 @@ metadata:
   namespace: skooner
 spec:
   ports:
-    - port: 80
+    - name: http
+      port: 80
+      protocol: TCP
       targetPort: 4654
   selector:
     k8s-app: skooner
