--- a/03_base_resources/helm-values/traefik.yaml
+++ b/03_base_resources/helm-values/traefik.yaml
@@ -30,6 +30,8 @@ ports:
       domains:
         - main: "*.nigelvanhattum.nl"
     middlewares: []
+    forwardedHeaders:
+      insecure: true
   websecure:
     port: 8443
     expose: true
@@ -43,6 +45,8 @@ ports:
       domains:
         - main: "*.local.nigelvanhattum.nl"
     middlewares: []
+    forwardedHeaders:
+      insecure: true
   postgresql:
     port: 5432
     expose: true
@@ -52,6 +56,8 @@ ports:
       options:
         default:
           sniStrict: true
+    forwardedHeaders:
+      insecure: true
 
 service:
   enabled: true
@@ -123,3 +129,15 @@ providers:
     enabled: true
     # -- Allows IngressRoute to reference resources in namespace other than theirs
     allowCrossNamespace: true
+
+logs:
+  general:
+    # -- By default, the logs use a text format (common), but you can
+    # also ask for the json format in the format option
+    # format: json
+    # By default, the level is set to ERROR.
+    # -- Alternative logging levels are DEBUG, PANIC, FATAL, ERROR, WARN, and INFO.
+    level: DEBUG
+  access:
+    # -- To enable access logs
+    enabled: false
