Update pic-of-the-day ingress

--- a/03_base_resources/manifests/picture-of-the-day/ingress.yaml
+++ b/03_base_resources/manifests/picture-of-the-day/ingress.yaml
@@ -3,8 +3,8 @@ kind: Ingress
 metadata:
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
-  name: skooner
-  namespace: skooner
+  name: picture-of-the-day
+  namespace: picture-of-the-day
 spec:
   ingressClassName: traefik
   rules:
