--- a/03_base_resources/manifests/picture-of-the-day/ingress.yaml
+++ b/03_base_resources/manifests/picture-of-the-day/ingress.yaml
@@ -1,4 +1,14 @@
 apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: pictures-ratelimit
+spec:
+  rateLimit:
+    average: 20
+    burst: 3
+    period: 1m
+---
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: picture-of-the-day
@@ -17,8 +27,10 @@ spec:
       port: 8080                     
       responseForwarding:
         flushInterval: 1ms
-      # scheme: https
-      strategy: RoundRobin    
+      strategy: RoundRobin
+    middlewares:
+      - name: pictures-ratelimit
+        namespace: picture-of-the-day  
 
 ---
 
@@ -41,5 +53,4 @@ spec:
       port: 8080                     
       responseForwarding:
         flushInterval: 1ms
-      # scheme: https
       strategy: RoundRobin   
