Decrease Traefik logging

--- a/03_base_resources/helm-values/traefik.yaml
+++ b/03_base_resources/helm-values/traefik.yaml
@@ -137,7 +137,7 @@ logs:
     # format: json
     # By default, the level is set to ERROR.
     # -- Alternative logging levels are DEBUG, PANIC, FATAL, ERROR, WARN, and INFO.
-    level: DEBUG
+    level: WARN
   access:
     # -- To enable access logs
     enabled: false
