Automate Azure EntraID connection

--- a/03_base_resources/helm-values/authentik.yaml
+++ b/03_base_resources/helm-values/authentik.yaml
@@ -19,6 +19,9 @@ ingress:
         - path: "/"
           pathType: Prefix
 
+blueprints:
+  - ${blueprint_configmap}
+
 ### https://goauthentik.io/docs/installation/automated-install
 envValueFrom: 
   AUTHENTIK_BOOTSTRAP_TOKEN:
