--- a/02_base_resources/helm-values/postgresql-cluster.yaml
+++ b/02_base_resources/helm-values/postgresql-cluster.yaml
@@ -56,7 +56,7 @@ backups:
       # -- Scheduled backup name
       name: daily-backup
       # -- Schedule in cron format
-      schedule: "0 4 * * *"
+      schedule: "0 0 4 * * *"
       # -- Backup owner reference
       backupOwnerReference: self
 
