--- a/02_base_resources/manifests/nfs-csi/nfs-storageClass-traefik.yaml
+++ b/02_base_resources/manifests/nfs-csi/nfs-storageClass-traefik.yaml
@@ -4,8 +4,8 @@ metadata:
   name: nfs-csi-traefik
 provisioner: nfs.csi.k8s.io
 parameters:
-  server: 192.168.20.3
-  share: /volume1/k8s/traefik
+  server: ${nas_ip}
+  share: ${root_path}/traefik
 reclaimPolicy: Retain
 mountOptions:
   - hard
