--- a/02_base_resources/helm-values/authentik.yaml
+++ b/02_base_resources/helm-values/authentik.yaml
@@ -3,47 +3,45 @@ authentik:
         enabled: true
     secret_key: ${authentik_secret_key}
     postgresql:
-        use_pgpool: true
         host: postgresql-cluster-rw.postgresql.svc.cluster.local
         password: ${authentik_postgresql_password}
     log_level: info
 
-ingress:
-  enabled: true
-  ingressClassName: traefik
-  annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: internet
-  hosts:
-    - host: "authentik.nigelvanhattum.nl"
-      paths:
-        - path: "/"
-          pathType: Prefix
+server:
+  ingress:
+    enabled: true
+    ingressClassName: traefik
+    annotations:
+      traefik.ingress.kubernetes.io/router.entrypoints: internet
+    hosts:
+      - "authentik.nigelvanhattum.nl"
 
 blueprints:
-  - ${blueprint_configmap}
+  configMaps:
+    - ${blueprint_configmap}
 
 ### https://goauthentik.io/docs/installation/automated-install
-envValueFrom: 
-  AUTHENTIK_BOOTSTRAP_TOKEN:
-    secretKeyRef:
-      key: token
-      name: ${secret_name}
-  AUTHENTIK_BOOTSTRAP_EMAIL:
-    secretKeyRef:
-      key: email
-      name: ${secret_name}
-  AUTHENTIK_BOOTSTRAP_PASSWORD:
-    secretKeyRef:
-      key: password
-      name: ${secret_name}
+global:
+  env: 
+    - name: AUTHENTIK_BOOTSTRAP_TOKEN
+      valueFrom:
+        secretKeyRef:
+          name: ${secret_name}
+          key: token
+    - name: AUTHENTIK_BOOTSTRAP_EMAIL
+      valueFrom:
+        secretKeyRef:
+          name: ${secret_name}
+          key: email
+    - name: AUTHENTIK_BOOTSTRAP_PASSWORD
+      valueFrom:
+        secretKeyRef:
+          name: ${secret_name}
+          key: password
 
 geoip:
   enabled: false
   updateInterval: 8
-
-autoscaling:
-  server:
-    enabled: true
 
 redis:
   enabled: true
