Updated Authentik and its documentation

--- a/02_base_resources/helm-values/authentik.yaml
+++ b/02_base_resources/helm-values/authentik.yaml
@@ -42,6 +42,8 @@ global:
 geoip:
   enabled: false
   updateInterval: 8
+  existingSecret:
+    secretName: ${geo_ip_secret}
 
 redis:
   enabled: true
