Move importer 1 domain up

--- a/03_applications/manifests/firefly/importer-local.yaml
+++ b/03_applications/manifests/firefly/importer-local.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: traefik
   rules:
-    - host: import.finance.local.nigelvanhattum.nl
+    - host: import-finance.local.nigelvanhattum.nl
       http:
         paths:
           - backend:
