--- a/03_applications/helm-values/plex-management.yaml
+++ b/03_applications/helm-values/plex-management.yaml
@@ -87,7 +87,7 @@ sonarr:
 radarr:
   enabled: true
   image:
-    pullPolicy: IfNotPresent
+    pullPolicy: Always
     # Overrides the image tag whose default is the chart appVersion.
     tag: "latest"
 
