--- a/02_base_resources/helm-values/authentik.yaml
+++ b/02_base_resources/helm-values/authentik.yaml
@@ -40,7 +40,7 @@ global:
           key: password
 
 geoip:
-  enabled: false
+  enabled: true
   updateInterval: 8
   existingSecret:
     secretName: ${geo_ip_secret}
