Adding local AI (Ollama) Closes #9

--- a/03_applications/helm-values/mealie.yaml
+++ b/03_applications/helm-values/mealie.yaml
@@ -78,6 +78,12 @@ mealie:
       secretKeyRef:
         name: ${oidc_config}
         key: client_id
+  - name: OPENAI_BASE_URL
+    value: ollama.local.nigelvanhattum.nl
+  - name: OPENAI_API_KEY
+    value: "Dummy"
+  - name: OPENAI_MODEL
+    value: llama3.1 
 
 
 ingress:
