Adding https to Mealie config

--- a/03_applications/helm-values/mealie.yaml
+++ b/03_applications/helm-values/mealie.yaml
@@ -79,7 +79,7 @@ mealie:
         name: ${oidc_config}
         key: client_id
   - name: OPENAI_BASE_URL
-    value: ollama.local.nigelvanhattum.nl
+    value: https://ollama.local.nigelvanhattum.nl
   - name: OPENAI_API_KEY
     value: "Dummy"
   - name: OPENAI_MODEL
