--- a/02_base_resources/helm-values/traefik.yaml
+++ b/02_base_resources/helm-values/traefik.yaml
@@ -62,6 +62,18 @@ ports:
           sniStrict: true
     forwardedHeaders:
       insecure: true
+  tdarr-server:
+    port: 8266
+    expose:
+      default: true
+    exposedPort: 8266
+    tls:
+      enabled: false
+      options:
+        default:
+          sniStrict: true
+    forwardedHeaders:
+      insecure: true
 
 service:
   enabled: true
