--- a/02_base_resources/helm-values/traefik.yaml
+++ b/02_base_resources/helm-values/traefik.yaml
@@ -1,12 +1,13 @@
 image:
   # tag: "3.1.1"
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
-certResolvers:
+certificatesResolvers:
   letsencrypt:
-    dnsChallenge:
-      provider: cloudflare
-    storage: /data/acme.json
+    acme:
+      dnsChallenge:
+        provider: cloudflare
+      storage: /data/acme.json
 env:
   - name: CF_DNS_API_TOKEN
     valueFrom:
