Easier version management for mealie

--- a/03_applications/helm-values/mealie.yaml
+++ b/03_applications/helm-values/mealie.yaml
@@ -6,7 +6,7 @@ type: StatefulSet
 image:
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "${mealie_version}"
 
 mealie: 
   persistence:
